--- a/src/assets/orderNow.scss
+++ b/src/assets/orderNow.scss
@@ -1,33 +1,28 @@
 .authenticate {
-  height: 100%;
-  width: 36%;
   float: left;
   z-index: 3;
-  position: absolute;
+  position: fixed;
   background-color: white;
+  overflow: auto;
 
   .authentication {
-    padding: 35px 75px 35px 75px;
+    box-sizing: border-box;
     position: absolute;
     height: 100%;
-    width: 73%;
+    width: 100%;
     text-align: center;
 
     .header {
       font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
-      font-size: 2em;
+      font-size: 1.4rem;
     }
 
     hr {
-      margin: 20px 0;
+      margin: 20px 0 40px;
       border: 0;
       border-top: 1px solid #e9e8eb;
       height: 0;
       display: block;
-    }
-
-    .footer-1 {
-      font-size: 10px !important;
     }
   }
 }
@@ -46,10 +41,11 @@
 
     .input {
       border: 1px solid #e9e8eb;
-      font-size: 20px;
+      font-size: 1rem;
       padding: 12px;
       background: #f2f2f2;
-      width: 93%;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .alert-error {
@@ -58,7 +54,7 @@
       border-left: 2px solid #eac3bb;
       color: #c2533d;
       border-radius: 2px;
-      font-size: 13px;
+      font-size: 0.8rem;
       margin: 10px 0;
       padding: 6px 10px;
       font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -73,21 +69,21 @@
       background: #d0493e;
       margin-top: 10px;
       .ahref {
-        font-size: 20px;
+        font-size: 1rem;
+        box-sizing: border-box;
         padding: 12px;
-        width: 93%;
+        width: 100%;
         display: block;
         text-align: center;
         font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
         font-weight: 600;
-        font-size: 18px;
         line-height: 1;
         color: white;
         text-decoration: none;
         cursor: pointer;
-      }
-      :hover {
-        background-color: #bb4238;
+        &:hover {
+          background-color: #bb4238;
+        }
       }
     }
     .signin-disable-btn {
@@ -96,8 +92,10 @@
     }
     .signup-button {
       background-color: #5cb85c;
-      &:hover {
-        background-color: #4a934a;
+      .ahref {
+        &:hover {
+          background-color: #4a934a !important;
+        }
       }
     }
 
@@ -107,9 +105,11 @@
     }
 
     .reset-button {
-      background-color: #3498db;
-      :hover {
-        background-color: #2a7aaf;
+      background-color: #2f89c5;
+      .ahref {
+        &:hover {
+          background-color: #2084c7;
+        }
       }
     }
     .reset-disable-btn {
@@ -117,39 +117,37 @@
       pointer-events: none;
     }
     .other-action {
-      margin-top: 10px;
-      margin-bottom: 40px;
+      padding-top: 10px;
+      box-sizing: border-box;
+      font-size: 0.9rem;
       .reset-action {
         cursor: pointer;
-        font-size: 14px;
+        padding-bottom: 50px;
       }
     }
 
     .create-button {
+      position: relative;
       width: 100%;
-      background: white;
-      border: 1px solid #4c555d;
-      margin-top: 70px;
+      background: #2f89c5;
+      margin-top: 60px;
+      box-sizing: border-box;
       .btn {
-        font-size: 20px;
+        box-sizing: border-box;
+        font-size: 1rem;
         padding: 12px;
-        width: 93%;
+        width: 100%;
         display: block;
         text-align: center;
         font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
-        font-weight: 200;
-        font-size: 18px;
+        font-weight: 600;
         line-height: 1;
-        color: black;
+        color: white;
         text-decoration: none;
         cursor: pointer;
       }
-      :hover {
-        border: 1px solid #75addf;
-        width: 93.6%;
-        box-shadow: none;
-        color: #33648f;
-        text-decoration: none;
+      &:hover {
+        background-color: #2084c7;
       }
     }
   }
@@ -179,21 +177,22 @@
 }
 
 .order-now {
-  height: 100%;
-  width: 36%;
   float: left;
   z-index: 2;
-  position: absolute;
+  position: fixed;
   background-color: white;
   .header {
     background-color: white;
     padding: 25px 25px 40px 25px;
+    font-size: 1rem;
     .title {
       text-align: left;
+      cursor: pointer;
     }
     .user {
       text-align: right;
       cursor: pointer;
+      display: block;
     }
   }
   .content {
@@ -204,7 +203,7 @@
   .content-button {
     margin: 0;
     background: white;
-    padding: 20px 20px 100px 20px;
+    padding: 20px 20px 20px 20px;
     .order-btn {
       margin: 0;
       padding: -180px -180px !important;
@@ -214,7 +213,7 @@
       text-align: center;
       font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
       font-weight: 600;
-      font-size: 18px;
+      font-size: 1rem;
       line-height: 1;
       padding: 15px 12px;
       border-radius: 2px;
@@ -222,6 +221,9 @@
       color: white;
       text-decoration: none;
       cursor: pointer;
+      &:hover {
+        background-color: #2084c7;
+      }
     }
   }
   .btn-disable {
@@ -240,7 +242,7 @@
     padding: 25px 30px 25px 50px;
     border: 0;
     margin: 0;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 600;
     margin: 0;
     font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
@@ -253,7 +255,7 @@
     padding: 25px 30px 25px 50px;
     border: 0;
     margin: 0;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 600;
     margin: 0;
     font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
@@ -264,14 +266,17 @@
     background: #f2f2f2 !important;
     border-bottom: 1px solid #dadada !important;
     color: black !important;
-    padding: 25px 30px 25px 50px;
+    padding: 25px;
     border: 0;
-    margin: 0;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 600;
     margin: 0;
     font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
     cursor: pointer;
+
+    .header-side {
+      font-weight: 200;
+    }
   }
 
   .address {
@@ -289,66 +294,87 @@
       font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
 
       .address-header {
-        font-size: 18px;
+        font-size: 0.9rem;
         color: black;
         margin: 0;
       }
 
       .address-detail {
-        font-size: 14px;
+        font-size: 0.8rem;
         color: #777;
       }
     }
   }
 }
 
+.time-period {
+  height: 400px;
+  background-color: white;
+  width: 100%;
+  position: relative;
+  overflow: auto;
+
+  .time-content {
+    border-bottom: 1px solid #dadada !important;
+    color: black !important;
+    padding: 20px;
+    border: 0;
+    text-align: center;
+    font-size: 0.9rem;
+    font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
+    cursor: pointer;
+    box-sizing: border-box;
+    &:hover {
+      background-color: #f2f2f2;
+    }
+  }
+}
+
 .order-now-extra {
   height: 100%;
-  width: 64%;
   float: right;
   z-index: 1;
   position: relative;
   background-color: rgb(63, 62, 62);
-  opacity: 0.4;
+  opacity: 0.8;
 
-  .order-now-close {
+  .close {
     color: #fff;
     height: 35px;
-    line-height: 1;
+    font-size: 2rem;
+    line-height: 2rem;
     position: absolute;
     right: 20px;
-    top: 20px;
+    top: 30px;
     width: 35px;
-    font-size: 50px;
     font-weight: 400;
     cursor: pointer;
   }
 }
 
-.menu {
-  height: 100%;
-  width: 36%;
+.menu,
+.quantity-menu {
   z-index: 4;
-  position: fixed;
+  position: absolute;
   background-color: white;
+  float: left;
 
   .menu-body {
-    padding: 20px 28px 20px 28px;
-    position: absolute;
-    height: 100%;
-    width: 90%;
+    box-sizing: border-box;
+    padding: 20px 28px;
+    width: 100%;
     text-align: left;
-    font-size: 16px;
+    font-size: 1rem;
+    height: 100%;
 
     .quantity-header {
       font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
       text-align: left;
       font-weight: 200;
       border-bottom: 1.5px solid #e9e8eb;
-      padding-bottom: 20px;
+      padding-bottom: 10px;
       .backward {
         cursor: pointer;
-        background-color: rgb(245, 210, 216);
       }
     }
 
@@ -357,25 +383,21 @@
       text-align: left;
       font-weight: 200;
       border-bottom: 1.5px solid #e9e8eb;
-      padding-bottom: 40px;
+      padding-bottom: 30px;
 
       .backward,
       .header-user {
         cursor: pointer;
-        background-color: rgb(245, 210, 216);
       }
     }
 
     .menu-content {
-      height: 80%;
-      width: 80%;
       float: center;
+      padding-bottom: 20px;
       .menu-title {
         color: #777;
-        font-size: 20px;
-        padding-top: 40px;
-        padding-bottom: 10px;
-        border-bottom: 1.5px solid #e9e8eb;
+        font-size: 1rem;
+        padding-top: 20px;
       }
       .menu-row {
         display: flex;
@@ -383,52 +405,50 @@
         cursor: pointer;
         .menu-name {
           color: black;
-          font-size: 18px;
+          font-size: 0.9rem;
           padding-top: 20px;
-          padding-bottom: 20px;
         }
         .menu-price {
           text-align: right;
           color: #777;
-          font-size: 16px;
+          font-size: 0.9rem;
           padding-top: 20px;
-          padding-bottom: 20px;
+          &:hover {
+            color: black !important;
+          }
         }
-      }
-      :hover {
-        color: black !important;
       }
     }
 
     .quantity-body {
       width: 100%;
-      height: 80%;
+      padding-top: 10px;
+      padding-bottom: 40px;
       .item {
         padding-top: 20px;
         padding-bottom: 20px;
 
         .item-header {
-          font-size: 36px;
+          font-size: 1.5rem;
         }
 
         .item-price {
           text-align: right;
-          font-size: 24px;
+          font-size: 1.5rem;
         }
       }
 
       .item-quantity {
-        position: fixed;
-        padding-top: 60px;
+        padding-top: 40px;
 
         .content {
           letter-spacing: 0.5px;
           color: #4c555d;
-          padding-bottom: 40px;
+          padding-bottom: 30px;
         }
 
         .item-count {
-          font-size: 18px;
+          font-size: 0.8rem;
 
           .count-Ibtn,
           .count-Dbtn {
@@ -436,7 +456,7 @@
             background: #e2e2e2;
             color: black;
             font-weight: 400;
-            font-size: 18px;
+            font-size: 0.8rem;
             width: 15px;
             text-align: center;
             padding: 12px 16px;
@@ -451,7 +471,7 @@
             border: 1px solid #ccc;
             color: black;
             font-weight: 400;
-            font-size: 18px;
+            font-size: 0.8rem;
             width: 15px;
             text-align: center;
             padding: 12px 16px;
@@ -460,18 +480,18 @@
       }
     }
     .quantity-footer {
-      position: relative;
       background: #53a653;
-      margin-top: 10px;
+      width: 100%;
+      box-sizing: border-box;
+      margin-bottom: 20px;
+
       .cart-btn {
-        font-size: 20px;
+        box-sizing: border-box;
+        font-size: 1rem;
         padding: 12px;
-        width: 93%;
-        display: block;
         text-align: center;
         font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
         font-weight: 600;
-        font-size: 18px;
         line-height: 1;
         color: white;
         text-decoration: none;
@@ -489,24 +509,23 @@
 }
 
 .check-out {
-  height: 100% !important;
-  width: 17%;
   z-index: 4;
-  left: 552px;
   position: absolute;
   background: #eff0f2;
   border-left: 1px solid #e9e8eb;
   padding: 0;
   color: black;
   font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
 
   .check-header {
-    height: 11%;
     background-color: #fbfbfb;
     margin: 0;
+
+    padding: 20px 28px;
     font-weight: 500;
-    font-size: 15px;
-    padding: 20px 20px 20px 20px;
+    font-size: 1rem;
+    box-sizing: border-box;
 
     .check-location {
       padding-bottom: 10px;
@@ -517,7 +536,7 @@
         display: flex;
       }
       .address {
-        font-size: 12px;
+        font-size: 0.8rem;
         font-weight: 100;
         line-height: 16px;
         font-family: ff-tisa-web-pro, Georgia, "Times New Roman", serif;
@@ -529,14 +548,17 @@
   }
 
   .check-body {
-    height: 62%;
     margin: 0;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 28px;
+    position: relative;
+    overflow: auto;
+    display: block;
     .check-item {
       width: 100%;
       display: block;
       flex-direction: column;
-      font-size: 14px;
+      font-size: 0.9rem;
+      box-sizing: border-box;
       .name {
         width: 50%;
         float: left;
@@ -547,12 +569,21 @@
         float: right;
         text-align: right;
         padding-bottom: 20px;
+
+        .calc {
+          font-size: 0.8rem;
+          color: #999;
+          float: left;
+          padding-left: 1rem;
+        }
       }
     }
   }
 
   .check-footer {
-    height: 15%;
+    box-sizing: border-box;
+    bottom: 0;
+    width: 100%;
     background-color: #fbfbfb;
     font-family: Helvetica, sans-serif;
     margin: 0;
@@ -564,7 +595,7 @@
       letter-spacing: 1px;
       padding-bottom: 40px;
       border-width: 100%;
-      font-size: 16px;
+      font-size: 1rem;
       font-weight: 400;
       line-height: 16px;
 
@@ -585,15 +616,16 @@
       position: relative;
       margin-top: 10px;
       background: #53a653;
+      box-sizing: border-box;
       .ahref {
-        font-size: 20px;
+        font-size: 1rem;
+        box-sizing: border-box;
         padding: 12px;
-        width: 93%;
+        width: 100%;
         display: block;
         text-align: center;
         font-family: jaf-bernino-sans-condensed, Helvetica, Arial, sans-serif;
         font-weight: 600;
-        font-size: 18px;
         line-height: 1;
         color: white;
         text-decoration: none;
@@ -616,57 +648,66 @@
   border: 0;
   font-family: sans-serif;
   color: black;
-  opacity: 0.9;
+  opacity: 0.95;
 
   .view-header {
-    font-weight: 500;
     margin: 0px;
-    padding: 20px;
+    padding: 20px 20px 10px;
 
     .view-location {
       text-align: center;
-      padding: 20px;
+      padding: 10px 0px;
       background-color: #fdfdff;
       border-bottom: 0.2px solid #e9e9e9;
 
       .title {
         display: block;
         padding: 3px;
-        font-size: 20px;
-        font-weight: 200;
+        font-size: 1rem;
+        font-weight: 500;
       }
       .address {
         padding: 3px;
-        font-size: 14px;
-        font-weight: 200;
+        font-size: 0.9rem;
+        font-weight: 300;
       }
     }
   }
 
   .view-body {
     margin: 0px;
-    padding: 20px;
+    padding: 10px 20px;
+    height: 85px;
+    overflow: auto;
 
     .view-item {
-      font-size: 14px;
-      font-weight: 200;
-      padding-bottom: 20px;
+      font-size: 0.8rem;
+      font-weight: 100;
+      padding-bottom: 10px;
+      display: flex;
 
       .price {
         text-align: right;
+        color: black;
+
+        .calc {
+          color: #999;
+          float: left;
+          padding-left: 1rem;
+        }
       }
     }
   }
 
   .view-footer {
     margin: 0px;
-    padding: 20px;
+    padding: 10px 20px;
 
     .view-total,
     .view-status {
-      font-size: 16px;
-      font-weight: 200;
-      padding-bottom: 15px;
+      font-size: 0.9rem;
+      font-weight: 300;
+      padding-bottom: 20px;
 
       .content {
         display: block;
@@ -678,23 +719,20 @@
       }
     }
     .view-status {
-      padding-top: 20px;
       color: rgb(99, 93, 93);
-      font-size: 14px;
     }
   }
 
   .view-btn {
-    padding: 20px;
+    padding: 10px 20px 20px;
     .btn {
       background: rgb(184, 217, 243);
-      font-size: 20px;
+      font-size: 1rem;
       padding: 12px;
       display: block;
       text-align: center;
       font-family: Arial, sans-serif;
-      font-weight: 200;
-      font-size: 16px;
+      font-weight: 500;
       color: black;
       text-decoration: none;
       cursor: pointer;
@@ -705,13 +743,12 @@
     }
     .cancelled-btn {
       background: rgb(231, 196, 196);
-      font-size: 20px;
+      font-size: 1rem;
       padding: 12px;
       display: block;
       text-align: center;
       font-family: Arial, sans-serif;
-      font-weight: 200;
-      font-size: 16px;
+      font-weight: 500;
       color: black;
       text-decoration: none;
       pointer-events: none;
@@ -722,20 +759,186 @@
   }
 }
 
-.wrapper-main {
-  background-color: rgb(126, 122, 122);
-  height: 100%;
-  opacity: 0.6;
+.wrapper {
+  width: 100%;
+  padding: 3vw;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1px;
+  top: 20%;
+  box-sizing: border-box;
+  overflow: auto;
+  position: absolute;
 }
 
-.wrapper {
-  width: 98%;
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 1px;
-  position: fixed;
-  top: 20%;
+@media (min-width: 1020px) {
+  .wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-  background-color: rgb(126, 122, 122);
+  html {
+    font-size: 16px !important;
+    line-height: 1.4 !important;
+  }
+
+  .order-now,
+  .menu,
+  .quantity-menu,
+  .authenticate {
+    width: 32%;
+    height: 100%;
+  }
+  .check-out {
+    left: 32%;
+    width: 24%;
+    height: 100%;
+    position: fixed;
+  }
+  .order-now-extra {
+    width: 68%;
+  }
+
+  .authentication {
+    padding: 50px 50px !important;
+  }
+
+  .check-footer {
+    position: absolute;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 1019px) and (orientation: landscape) {
+  .wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  html {
+    font-size: 14px !important;
+    line-height: 1.3 !important;
+  }
+
+  .order-now-extra {
+    display: none;
+  }
+
+  .order-now {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .authenticate {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .menu {
+    width: 100%;
+    overflow: auto;
+    position: relative;
+    height: 50%;
+  }
+
+  .quantity-menu {
+    width: 100%;
+    overflow: auto;
+    height: 50%;
+  }
+
+  .check-out {
+    width: 100%;
+    overflow: auto;
+    position: relative;
+    height: 50%;
+  }
+
+  .check-footer {
+    position: relative;
+  }
+
+  .view-menu {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .authentication {
+    padding: 25px 25px !important;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  html {
+    font-size: 12px !important;
+    line-height: 1.25 !important;
+  }
+
+  .order-now-extra {
+    display: none;
+  }
+
+  .order-now {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .authenticate {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .menu {
+    width: 100%;
+    overflow: auto;
+    position: relative;
+    height: 50%;
+  }
+
+  .quantity-menu {
+    width: 100%;
+    overflow: auto;
+    height: 50%;
+  }
+
+  .check-out {
+    width: 100%;
+    overflow: auto;
+    position: relative;
+    height: 50%;
+  }
+
+  .check-footer {
+    position: relative;
+  }
+
+  .view-menu {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    position: absolute;
+  }
+
+  .authentication {
+    padding: 25px !important;
+  }
 }
