--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -26,17 +26,8 @@
   display: block;
 }
 
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 #root {
   height: 100%;
-  background: black;
-  opacity: 0.9;
 }
 
 .main {
@@ -44,18 +35,15 @@ body {
   background: url(./images/default.jpg) no-repeat center center fixed;
   background-size: cover;
   width: 100%;
-  overflow: hidden;
   z-index: -1;
   position: absolute;
+  overflow: auto;
 }
 
 .index-content {
-  margin: 0;
-  border: 0;
-  outline: 0;
   text-align: center;
   color: white !important;
-  height: 100%;
+  height: 66%;
   top: 34%;
   width: 100%;
   z-index: -1;
@@ -63,14 +51,14 @@ body {
 
   .index-address {
     font-family: calluna;
-    font-size: 1.2vw;
+    font-size: 1rem;
     font-style: italic;
     letter-spacing: 0.03em;
     line-height: 1.3em;
   }
 
   .index-mode {
-    padding-top: 4vw;
+    padding-top: 30px;
     padding-bottom: 3vw;
     letter-spacing: 0.05em;
     line-height: 1.3em;
@@ -79,55 +67,202 @@ body {
       display: inline;
       padding: 0 2vw;
       font-family: ambroise-std;
-      font-size: 5.625vw;
+      font-size: 3rem;
       font-style: normal;
       font-weight: 300;
-      cursor: pointer;
     }
   }
 }
 
 .index-header {
-  margin: 0;
-  border: 0;
-  outline: 0;
   color: white;
   font-family: calluna;
-  padding: 3vw 3vw 3vw 3vw;
-  width: 95%;
+  padding: 3vw 3vw 0vw;
+  height: 34%;
+  width: 100%;
   z-index: -1;
+  box-sizing: border-box;
   position: absolute;
+  display: flex;
 
   .index-title {
-    margin: 0;
-    border: 0;
-    outline: 0;
     text-align: left;
     font-family: ambroise-std;
     font-style: normal;
     letter-spacing: 0.3em;
-    font-size: 21px;
+    font-size: 1rem;
+    width: 100%;
+    display: inline-block;
+    padding-bottom: 20px;
+  }
+
+  .other-nav-content {
+    font-family: ambroise-std;
+    font-style: normal;
+    letter-spacing: 0.3em;
+    font-size: 0.81rem;
+    margin-right: 9px;
+    border: 0;
+    outline: 0;
+    display: inline-block;
+    cursor: pointer;
+
+    &:hover {
+      color: rgb(197, 74, 74) !important;
+    }
   }
 
   .index-nav {
+    width: 100%;
     margin: 0;
     border: 0;
     outline: 0;
     text-align: right;
     letter-spacing: 0.01em;
-    font-size: 15px;
-
-    :hover {
-      color: rgb(197, 74, 74) !important;
-    }
+    font-size: 1vw;
 
     .index-nav-content {
-      margin: 0;
-      border: 0;
-      outline: 0;
-      padding-inline-end: 10px;
-      display: inline;
+      padding-bottom: 20px;
+      font-family: ambroise-std;
+      font-style: normal;
+      letter-spacing: 0.3em;
+      font-size: 1rem;
+      display: block;
+
+      .index-cursor {
+        cursor: pointer;
+        &:hover {
+          color: rgb(197, 74, 74) !important;
+        }
+      }
+    }
+  }
+}
+
+.index-header-mob {
+  color: white;
+  font-family: Helvetica, Arial, sans-serif;
+  width: 100%;
+  z-index: 100;
+  box-sizing: border-box;
+  position: relative;
+
+  .index-title {
+    box-sizing: border-box;
+    padding: 5vw 3vw 5vw;
+    z-index: 100;
+    font-style: normal;
+    letter-spacing: 0.3em;
+    font-size: 1rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+
+    .menu-body {
+      z-index: 100;
+      float: right;
+      width: 20px;
+      .menu-icon {
+        width: 100%;
+        height: 2px;
+        display: block;
+        background-color: rgb(240, 238, 238);
+        margin: 3px 0;
+      }
+    }
+  }
+  .index-nav {
+    background-color: rgb(240, 238, 238);
+    height: 100%;
+    width: 100%;
+    padding-top: 3vw;
+    z-index: 100;
+    position: inherit;
+    overflow: auto;
+    .index-nav-content {
+      padding: 3vw;
+      box-sizing: border-box;
+      color: black;
+      width: 100%;
+      font-style: normal;
+      letter-spacing: 0.3em;
+      font-size: 1rem;
       cursor: pointer;
     }
+  }
+}
+
+#message {
+  position: absolute;
+  color: black;
+  font-size: 0.8rem;
+  margin: auto;
+  width: 40%;
+  z-index: 101;
+  top: 10%;
+  left: 0;
+  right: 0;
+  background: #ecc879;
+  text-align: center;
+  line-height: 2;
+  overflow: hidden;
+  box-shadow: 0 0 5px #d3a747;
+  border-radius: 20px;
+  animation: cssAnimation 0s ease-in 3s forwards;
+}
+
+@keyframes cssAnimation {
+  to {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+}
+
+@media (min-width: 1020px) {
+  html {
+    font-size: 16px !important;
+    line-height: 1.4 !important;
+  }
+
+  .index-header-mob {
+    display: none;
+  }
+
+  .index-content {
+    .index-mode {
+      padding-top: 50px;
+    }
+  }
+
+  .index-content {
+    .index-address {
+      font-size: 20px;
+    }
+  }
+
+  .index-mode-content {
+    font-size: 70px !important;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 1019px) and (orientation: landscape) {
+  html {
+    font-size: 14px !important;
+    line-height: 1.3 !important;
+  }
+
+  .index-header {
+    display: none;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  html {
+    font-size: 12px !important;
+    line-height: 1.25 !important;
+  }
+
+  .index-header {
+    display: none;
   }
 }
